--- a/main.html
+++ b/main.html
@@ -1,14 +1,15 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title></title>
+		<title>Snake</title>
 		<link href="css/style.css" rel="stylesheet" type="text/css">
 		<link href="css/normalize.css" rel="stylesheet" type="text/css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	</head>
 
 	<body>
-		
+		<div class="gameframe">
+		</div>
 		<script src="js/myjs.js"></script>
 	</body> 
 </html>
